roles/monitoring/files/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  # annotations:
  #     prometheus.io/scrape: 'true'
  #     prometheus.io/port:   '9090'  
spec:
  selector: 
    app: prometheus
  ports:
    - name: web
      protocol: TCP
      port: 9090
