roles/monitoring/files/vmware-exporter-service.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: monitoring
  name: vmware-exporter
  namespace: monitoring
spec:
  ports:
  - name: web
    port: 9272
    targetPort: 9272
  selector:
    app: monitoring
