roles/monitoring/files/grafana-ingress.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints: 
    - web
  routes:
  - match: Host(`grafana.local.lan`) 
    kind: Rule
    services:
    - name: grafana
      port: 3000
