roles/monitoring/files/prometheus-ingress.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  entryPoints: 
    - web
  routes:
  - match: Host(`promk3s.local.lan`) 
    kind: Rule
    services:
    - name: prometheus-external
      port: 9090
